--- a/src/pages/barcode-form/barcode-form.scss
+++ b/src/pages/barcode-form/barcode-form.scss
@@ -1,3 +1,116 @@
 page-barcode-form {
+  .content {
+    .scroll-content {
+      overflow: hidden;
 
+      .grid {
+        padding: 0;
+
+        .barcode {
+          .col {
+            padding: 0;
+            position: relative;
+
+            .code {
+              position: absolute;
+              bottom: 18px;
+              font-size: 20px;
+              width: 100%;
+              text-align: center;
+            }
+          }
+        }
+
+        .form-list {
+          .col {
+            padding: 0;
+
+            .list {
+              .item {
+                background-color: #445dc5;
+                margin-bottom: 2px;
+
+                &.disabled {
+                  background-color: #b4bee8;
+                  pointer-events: none;
+
+                  .item-cover {
+                    pointer-events: none;
+                  }
+                }
+
+                h2 {
+                  color: #fff;
+                }
+
+                p {
+                  color: #fff;
+                }
+
+                .checkbox-icon {
+                  width: 34px;
+                  height: 34px;
+                  border-radius: 6px;
+                  -webkit-box-shadow: 1px -1px 6px 1px #ccc inset;
+                  box-shadow: 1px -1px 6px 1px #ccc inset;
+                  border-color: transparent;
+                  background: #fff;
+
+                  &.checkbox-checked {
+                    .checkbox-inner {
+                      width: 26px;
+                      height: 26px;
+                      border: none;
+                      transform: rotate(0);
+                      background: #445dc5;
+                      top: 3px;
+                      left: 3px;
+                      border-radius: 6px;
+                    }
+                  }
+                }
+
+                .select {
+                  .select-text {
+                    color: #fff;
+                  }
+
+                  .select-icon {
+                    .select-icon-inner {
+                      color: #fff;
+                    }
+                  }
+                }
+
+                .input {
+                  width: 100px;
+                  border: none;
+                  border-radius: 6px;
+                  height: 34px;
+                  line-height: 34px;
+                  text-align: center;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .footer {
+    .submit {
+      width: 250px;
+      height: 62px;
+      font-size: 36px;
+      border-radius: 10px;
+      margin: 3rem 0.2rem;
+      background-color: #445dc5;
+
+      &.disabled {
+        background-color: #b4bee8;
+        opacity: 1;
+      }
+    }
+  }
 }
