--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -37,6 +37,15 @@ page-sign-in {
             }
           }
 
+          &.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus),
+          &.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus),
+          &.item-input.input-has-focus {
+            .item-inner {
+              border: none;
+              box-shadow: none;
+            }
+          }
+
           .item-inner {
             padding: 0;
 
