--- a/src/pages/camera/camera.scss
+++ b/src/pages/camera/camera.scss
@@ -42,10 +42,6 @@ page-camera {
   .footer {
     text-align: center;
 
-    &.right {
-      text-align: right;
-    }
-
     .button {
       width: 81px;
       height: 81px;
@@ -54,9 +50,20 @@ page-camera {
       border-style: solid;
       border-width: 7px;
       border-radius: 50%;
-      margin: 20px 31px 38px;
-      -webkit-transition: all 0.3s ease-out;
-      transition: all 0.3s ease-out;
+      // -webkit-transition: all 1s ease-out;
+      // transition: all 1s ease-out;
+      position: absolute;
+
+      bottom: 38px;
+      left: 0;
+      right: 0;
+      margin: auto;
+
+      &.right {
+        left: auto;
+        right: 31px;
+        background: #fff;
+      }
     }
   }
 }
