--- a/src/pages/camera/camera.scss
+++ b/src/pages/camera/camera.scss
@@ -1,6 +1,8 @@
 page-camera {
   .content {
-    background: transparent;
+    background-color: transparent;
+    background-size: cover;
+    background-position: center;
 
     .scroll-content {
       overflow: hidden;
